--- a/src/notebook.ipynb
+++ b/src/notebook.ipynb
@@ -1145,7 +1145,7 @@
                 "As a refresher, here is the KDE distribution of the Award Amounts:\n",
                 "\n",
                 "<img\n",
-                "src=\"https://assets.datacamp.com/production/repositories/2210/datasets/2d65e2dd7875735d1db7f6ff0faa1d4577db50d3/tuition_kde_plot.png\"\n",
+                "src=\"tuition_kde_plot.png\"\n",
                 "width=\"300\" />\n",
                 "\n",
                 "While this plot is useful, there is a lot more we can learn by looking\n",
